Fixing spacing between items

--- a/css/digital_agency.css
+++ b/css/digital_agency.css
@@ -16,4 +16,5 @@
 
 .view .views-view-grid .views-grid-box {
   border:  1px solid black;
+  margin-bottom:  1rem;
 }
